Int test needs more perm space